RESOLVED FIXED303994
[GStreamer][WebRTC] webrtc/video-addTransceiver.html crashes
https://bugs.webkit.org/show_bug.cgi?id=303994
Summary [GStreamer][WebRTC] webrtc/video-addTransceiver.html crashes
Philippe Normand
Reported 2025-12-11 07:41:29 PST
The issue here is RealtimeOutgoingVideoSourceGStreamer creates a videotestsrc when it has no track and then we call replaceTrack casting that videotestsrc to a webkitmediastreamsrc...
Attachments
Philippe Normand
Comment 1 2025-12-11 08:57:46 PST
Philippe Normand
Comment 2 2025-12-12 00:33:50 PST
*** Bug 304011 has been marked as a duplicate of this bug. ***
EWS
Comment 3 2025-12-12 00:58:09 PST
Committed 304346@main (4292cdb20b82): <https://commits.webkit.org/304346@main> Reviewed commits have been landed. Closing PR #55248 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2025-12-12 00:59:12 PST
Note You need to log in before you can comment on or make changes to this bug.